WIP fixing piTest in CI/CD